dc-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: dc-deploy
   labels:
     name: dc-deploy
   
spec:
   replicas: 1
   selector:
      matchLabels:
       app: dc
   template: 
      metadata: 
        labels:
          app: dc
      spec: 
        containers:
         - name: dc
           #           image: 965407002393.dkr.ecr.eu-west-1.amazonaws.com/dc:release-mexos-21.1.0.45ae6ed6528f8008955f265b683061ba539e0129
           image: tutum/hello-world
           imagePullPolicy: Always
           ports:
            #- containerPort: 11080
             - containerPort: 80
