dc-service.yml
apiVersion: v1
kind: Service
metadata:
   name: dc-service
   labels:
     name: dc-service
     app: dc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      #nodePort: 11080
  selector:
    app: dc
