dc-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dc-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: client=xxx
    alb.ingress.kubernetes.io/group.name: xxx-dc
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=86400

spec:
  rules:
  - host: "dc.prod.xxx.mexos.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dc-service
            port:
              number: 80
